--- a/.markbot.yml
+++ b/.markbot.yml
@@ -1,24 +1,22 @@
 repo: 'events-calendar'
 canvasCourse: 'web-dev-2'
 
-naming: true
-restrictFileTypes: true
-liveWebsite: true
-
-git:
-  numCommits: 2
-  allCommitted: true
-  allSynced: true
+inherit:
+  - naming-restrict-live
+  - git-2
+  - html
+  - css
+  - google-fonts
+  - modulifier
+  - typografier
+  - css-order-modules-type-main
+  - modulifier-list-group
 
 html:
   - path: 'index.html'
-    valid: true
-    bestPractices: true
+    outline: false
     has:
       - ['link[href*="Merriweather:400,400i,700"]', 'The Google Font, `Merriweather` (regular, italic & bold) is missing']
-      - ['link[href*="modules.css"] + link[href*="grid.css"]', 'The `modules.css` file must come before the `grid.css` file']
-      - ['link[href*="grid.css"] + link[href*="type.css"]', 'The `grid.css` file must come before the `type.css` file']
-      - ['link[href*="type.css"] + link[href*="main.css"]', 'The `type.css` file must come before the `main.css` file']
       - 'table'
       - 'thead'
       - 'tbody'
@@ -28,7 +26,6 @@ html:
       - 'td'
       - 'th[scope]'
       - '[colspan]'
-      - '.list-group'
     search:
       - 'November, 1963'
       - 'Sun'
@@ -41,14 +38,9 @@ html:
       - 'India launched its first rocket'
       - 'Surtsey Island created'
       - 'Doctor Who premiered'
-      - 'text-'
-      - 'push-'
-      - 'micro|milli|kilo|mega|giga|tera|peta|exa|zetta|yotta'
 
 css:
   - path: 'css/main.css'
-    valid: true
-    bestPractices: true
     has:
       - ['html', 'font-family', 'Merriweather, serif']
     search:
@@ -76,21 +68,6 @@ css:
       - 'font-weight'
       - 'text-align'
       - 'list-style-type'
-  - path: 'css/grid.css'
-    valid: true
-    bestPractices: true
-    search:
-      - ['https://gridifier.web-dev.tools/#xs,4,0,0,0;s,4,25,0,0;m,4,38,1,1;l,4,60,1,1', 'The `grid.css` should be generated with Gridifier’s default settings']
-  - path: 'css/type.css'
-    valid: true
-    bestPractices: true
-    search:
-      - ['https://typografier.web-dev.tools/#0,100,1.3,1.067,0;38,110,1.4,1.125,1;60,120,1.5,1.125,1;90,130,1.5,1.125,1', 'The `type.css` should be generated with Typografier’s default settings']
-  - path: 'css/modules.css'
-    valid: true
-    bestPractices: true
-    search:
-      - ['https://modulifier.web-dev.tools/#responsive;images;list-group;embed;media-object;icons;hidden;positioning;nice-lists;forms;buttons;accessibility;print', 'Select all the different modules when adding Modulifier.']
 
 screenshots:
   - path: 'index.html'
